fixed alignment for footer in landing section

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,7 @@
 
 * {
   font-family: 'Figtree', sans-serif;
+font-family: 'Playfair Display', serif;
 }
 
 @layer utilities {
